--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -62,7 +62,7 @@ tooltip label {
 }
 
 #workspaces button.active {
-  color: @rose;
+  color: @foam;
 }
 
 #custom-divider {
@@ -70,14 +70,14 @@ tooltip label {
   padding-right: 0;
   margin: 0.5em 0;
   margin-left: 0.5em;
-  color: @rose;
+  color: @foam;
 }
 
 #window {
   padding: 0.25em 0.75em;
   margin: 0.5em 0;
   margin-left: 0.5em;
-  color: @rose;
+  color: @foam;
 }
 
 window#waybar.empty #window {
@@ -111,6 +111,7 @@ window#waybar.empty #window {
 }
 
 #custom-media-previous {
+  color: @rose;
   margin-right: 0.5em;
 }
 
@@ -121,6 +122,10 @@ window#waybar.empty #window {
   padding-right: 0.5em;
   margin-right: 0.5em;
   border-radius: 50%;
+}
+
+#custom-media-next {
+  color: @rose;
 }
 
 #custom-media-track {
