--- a/dot_config/gtk-4.0/gtk.css
+++ b/dot_config/gtk-4.0/gtk.css
@@ -1,9 +1,10 @@
+/* NOTE: From https://github.com/rose-pine/gtk/blob/main/gtk4/rose-pine.css */
 
 @define-color accent_bg_color #c4a7e7;
 @define-color accent_fg_color #191724;
 @define-color accent_color #c4a7e7;
 
-@define-color destructive_bg_color #eb6f92; 
+@define-color destructive_bg_color #eb6f92;
 @define-color destructive_fg_color #191724;
 @define-color destructive_color #eb6f92;
 
@@ -30,10 +31,29 @@
 @define-color headerbar_backdrop_color @window_bg_color;
 @define-color headerbar_shade_color #191724;
 
-
 @define-color card_bg_color #1f1d2e;
 @define-color card_fg_color #e0def4;
 @define-color card_shade_color #1f1d2e;
 
 @define-color popover_bg_color #26233a;
 @define-color popover_fg_color #e0def4;
+
+@define-color sidebar_backdrop_color #26233A;
+@define-color sidebar_bg_color #26233A;
+@define-color sidebar_fg_color #e0def4;
+
+/* Target the specific row in the sidebar that's selected */
+.navigation-sidebar row:selected {
+  background-color: #c4a7e7;
+  color: #191724;
+}
+
+/* Target the label in the selected row */
+.navigation-sidebar row:selected .sidebar-label {
+  color: #191724;
+}
+
+/* Hover effect for non-selected rows */
+.navigation-sidebar row:hover:not(:selected) {
+  background-color: #c4a7e733;
+}
